--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@
         body {
          margin: 0;
          padding: 0;
-         padding-top:10px;
+         padding-top:0px;
           text-align: center; 
         }
 
-  
+        header  {background-color:#fcdd60;
+                  margin: 0;
+                  padding: 0;
+                 
+                    position: sticky; /*(recomended)*/
+                      top: 0px;
+                      position: fixed;
+                  
+        }
 
 
 
@@ -18,6 +26,5 @@ ul {text-align: center;
   margin-right:  auto;
   padding: 0;    
 }
-/* Comment Section */
 
-/* 
+
