--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 /* Page Center */      
         
-        body {
-         margin: 0;
-         padding: 0;
-         padding-top:10px;
-          text-align: center; 
-        }
+       
+header  {
+  background-color:#fcdd60;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  top: 0px;
+  position: absolute;
+}
 
-  
+body {
+  margin: 0;
+  padding: 0;
+  padding-top: 250px;
+   text-align: center; 
+ }
 
 
 
@@ -18,6 +26,4 @@ ul {text-align: center;
   margin-right:  auto;
   padding: 0;    
 }
-/* Comment Section */
 
-/* 
